--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </style>
 </head>
 <body>
+ 
   <div class="bg_heart"></div>
   <div class="container">
     <h2 id="text1"></h2>
@@ -212,8 +213,9 @@
 
     typeWriter();
   </script>
-<audio autoplay>
+ <audio autoplay>
   <source src="hpbd.mp3" type="audio/mpeg">
+  <source src="hpbd.ogg" type="audio/ogg">
 </audio>
 </body>
 </html>
